[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/UI/StatusEffects/Weakness.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/StatusEffects/Knockback.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/StatusEffects/Freezing.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/StatusEffects/Burning.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/StatusEffects/Poison.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/StatusEffects/Bleeding.png" type="Texture" id=6]
[ext_resource path="res://Scenes/UI/StatusBar.gd" type="Script" id=7]
[ext_resource path="res://Fonts/Fipps-Regular.tres" type="DynamicFont" id=8]
[ext_resource path="res://Scenes/UI/DisplayTime.gd" type="Script" id=9]
[ext_resource path="res://Scenes/UI/DisplayStacks.gd" type="Script" id=10]
[ext_resource path="res://Fonts/Fipps-Regular.otf" type="DynamicFontData" id=11]
[ext_resource path="res://Assets/UI/StatusEffects/Regeneration.png" type="Texture" id=12]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 8
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_top = 32
extra_spacing_char = 2
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[node name="StatusBar" type="Control"]
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -256.0
margin_bottom = 51.0
rect_min_size = Vector2( 32, 51 )
size_flags_horizontal = 11
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Burning" type="MarginContainer" parent="StatusContainer"]
visible = false
margin_left = 8.0
margin_right = 40.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 51 )
size_flags_horizontal = 8
size_flags_vertical = 2

[node name="BurningSprite" type="Sprite" parent="StatusContainer/Burning"]
position = Vector2( 16, 16 )
rotation = 3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 4 )
flip_h = true
hframes = 3

[node name="DisplayStacks" type="Label" parent="StatusContainer/Burning"]
margin_right = 32.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
rect_clip_content = true
size_flags_vertical = 1
theme = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayTime" type="Label" parent="StatusContainer/Burning"]
margin_right = 32.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 19 )
rect_clip_content = true
size_flags_vertical = 2
theme = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lifetime" type="Timer" parent="StatusContainer/Burning/DisplayTime"]
wait_time = 3.0
one_shot = true

[node name="Damage" type="Timer" parent="StatusContainer/Burning"]
wait_time = 0.5
one_shot = true

[node name="Poison" type="MarginContainer" parent="StatusContainer"]
visible = false
margin_left = 44.0
margin_right = 76.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="PoisonSprite" type="Sprite" parent="StatusContainer/Poison"]
position = Vector2( 16, 16 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 5 )
flip_h = true
hframes = 3

[node name="DisplayStacks" type="Label" parent="StatusContainer/Poison"]
margin_right = 32.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
rect_clip_content = true
size_flags_vertical = 1
theme = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayTime" type="Label" parent="StatusContainer/Poison"]
margin_right = 32.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 19 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lifetime" type="Timer" parent="StatusContainer/Poison/DisplayTime"]
wait_time = 2.0
one_shot = true

[node name="Damage" type="Timer" parent="StatusContainer/Poison"]
one_shot = true

[node name="Bleeding" type="MarginContainer" parent="StatusContainer"]
visible = false
margin_left = 80.0
margin_right = 112.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="BleedingSprite" type="Sprite" parent="StatusContainer/Bleeding"]
position = Vector2( 16, 16 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 6 )
flip_h = true
hframes = 3

[node name="DisplayStacks" type="Label" parent="StatusContainer/Bleeding"]
margin_right = 32.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
rect_clip_content = true
size_flags_vertical = 1
theme = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayTime" type="Label" parent="StatusContainer/Bleeding"]
margin_right = 32.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 19 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lifetime" type="Timer" parent="StatusContainer/Bleeding/DisplayTime"]
wait_time = 5.0
one_shot = true

[node name="Damage" type="Timer" parent="StatusContainer/Bleeding"]
wait_time = 0.5
one_shot = true

[node name="Freezing" type="MarginContainer" parent="StatusContainer"]
visible = false
margin_left = 116.0
margin_right = 148.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="FreezingSprite" type="Sprite" parent="StatusContainer/Freezing"]
position = Vector2( 16, 16 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 3 )
flip_h = true
hframes = 3

[node name="DisplayStacks" type="Label" parent="StatusContainer/Freezing"]
margin_right = 32.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
rect_clip_content = true
size_flags_vertical = 1
theme = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayTime" type="Label" parent="StatusContainer/Freezing"]
margin_right = 32.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 19 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lifetime" type="Timer" parent="StatusContainer/Freezing/DisplayTime"]
wait_time = 2.0
one_shot = true

[node name="Weakness" type="MarginContainer" parent="StatusContainer"]
visible = false
margin_left = 152.0
margin_right = 184.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="WeaknessSprite" type="Sprite" parent="StatusContainer/Weakness"]
position = Vector2( 16, 16 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 1 )
flip_h = true
hframes = 3

[node name="DisplayStacks" type="Label" parent="StatusContainer/Weakness"]
margin_right = 32.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
rect_clip_content = true
size_flags_vertical = 1
theme = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayTime" type="Label" parent="StatusContainer/Weakness"]
margin_right = 32.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 19 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lifetime" type="Timer" parent="StatusContainer/Weakness/DisplayTime"]
wait_time = 3.5
one_shot = true

[node name="Knockback" type="MarginContainer" parent="StatusContainer"]
visible = false
margin_left = 188.0
margin_right = 220.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="KnockbackSprite" type="Sprite" parent="StatusContainer/Knockback"]
position = Vector2( 16, 16 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 2 )
flip_h = true
hframes = 3

[node name="DisplayStacks" type="Label" parent="StatusContainer/Knockback"]
margin_right = 32.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
rect_clip_content = true
size_flags_vertical = 1
theme = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayTime" type="Label" parent="StatusContainer/Knockback"]
margin_right = 32.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 19 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lifetime" type="Timer" parent="StatusContainer/Knockback/DisplayTime"]
wait_time = 5.0
one_shot = true

[node name="Healing" type="MarginContainer" parent="StatusContainer"]
visible = false
margin_left = 224.0
margin_right = 256.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="HealingSprite" type="Sprite" parent="StatusContainer/Healing"]
position = Vector2( 16, 16 )
rotation = -3.14159
scale = Vector2( 1, -1 )
texture = ExtResource( 12 )
flip_h = true
hframes = 3

[node name="DisplayStacks" type="Label" parent="StatusContainer/Healing"]
margin_right = 32.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
rect_clip_content = true
size_flags_vertical = 1
theme = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayTime" type="Label" parent="StatusContainer/Healing"]
margin_right = 32.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 19 )
rect_clip_content = true
size_flags_horizontal = 0
size_flags_vertical = 0
theme = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
align = 1
valign = 1
clip_text = true
max_lines_visible = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lifetime" type="Timer" parent="StatusContainer/Healing/DisplayTime"]
wait_time = 3.0
one_shot = true

[node name="Healing" type="Timer" parent="StatusContainer/Healing"]
wait_time = 0.5
one_shot = true

[connection signal="bleed" from="." to="." method="_on_bleed"]
[connection signal="timeout" from="StatusContainer/Burning/DisplayTime/Lifetime" to="." method="_on_Burning_Lifetime_timeout"]
[connection signal="timeout" from="StatusContainer/Burning/Damage" to="." method="_on_Burning_Damage_timeout"]
[connection signal="timeout" from="StatusContainer/Poison/DisplayTime/Lifetime" to="." method="_on_Poison_Lifetime_timeout"]
[connection signal="timeout" from="StatusContainer/Poison/Damage" to="." method="_on_Poison_Damage_timeout"]
[connection signal="timeout" from="StatusContainer/Bleeding/DisplayTime/Lifetime" to="." method="_on_Bleeding_Lifetime_timeout"]
[connection signal="timeout" from="StatusContainer/Bleeding/Damage" to="." method="_on_Bleeding_Damage_timeout"]
[connection signal="timeout" from="StatusContainer/Freezing/DisplayTime/Lifetime" to="." method="_on_Freezing_Lifetime_timeout"]
[connection signal="timeout" from="StatusContainer/Weakness/DisplayTime/Lifetime" to="." method="_on_Weakness_Lifetime_timeout"]
[connection signal="timeout" from="StatusContainer/Knockback/DisplayTime/Lifetime" to="." method="_on_Knockback_Lifetime_timeout"]
[connection signal="timeout" from="StatusContainer/Healing/DisplayTime/Lifetime" to="." method="_on_Healing_Lifetime_timeout"]
[connection signal="timeout" from="StatusContainer/Healing/Healing" to="." method="_on_Healing_Healing_timeout"]
